<resources>
    <string name="app_name">My List</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="register">Cadastro</string>
    <string name="register2">Cadastre-se</string>
    <string name="register3">Cadastrar</string>
    <string name="enter">Entrar</string>
    <string name="name">Nome</string>
    <string name="name2">Nome:</string>
    <string name="mylists">Minhas Listas</string>
    <string name="myitens">Itens</string>
    <string name="newlist">Nova Lista</string>
    <string name="description">Descrição</string>
    <string name="add">Adicionar</string>
    <string name="edit_product">Editar Produto</string>
    <string name="add_product">Edicionar Produto</string>
    <string name="load_img">Carregar imagem:</string>
    <string name="name_product">Nome do produto</string>
    <string name="mark">Marca</string>
    <string name="price">Preço</string>
    <string name="quantity">Quantidade:</string>
    <string name="delete">Deletar</string>
    <string name="save">Salvar</string>
    <string name="lists">Listas</string>
    <string name="items">Itens</string>
    <string name="add_item">Adicionar Item</string>
    <string name="add_list">Adicionar Lista</string>
    <string name="edit_item">Editar Item</string>
    <string name="logout">Sair</string>
</resources>
