<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_login_desfoque_25">

    <EditText
        android:id="@+id/etRegister_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_edittext"
        android:inputType="text"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/etRegister_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_edittext"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/etRegister_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_edittext"
        android:inputType="textVisiblePassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btnRegister_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:elevation="16dp"
        android:text="@string/register3"
        android:fontFamily="casual"
        android:textColor="@color/colorAccent"
        android:background="@drawable/background_btn_login"/>

    <ProgressBar
        android:id="@+id/progressBar_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>