<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_img"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview_add_item"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/icon_upload_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name2"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/textview_add_item_name_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_product"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/edittext_add_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edittext"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/edittext_add_item_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edittext"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/edittext_add_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edittext"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:text="@string/quantity"/>

        <ImageView
            android:id="@+id/imageview_add_item_button_add_qtd"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="8dp"
            android:src="@drawable/icon_add"/>

        <TextView
            android:id="@+id/textview_add_item_qtd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:textSize="10pt"
            android:text="1"/>

        <ImageView
            android:id="@+id/imageview_add_item_button_less_qtd"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="8dp"
            android:src="@drawable/icon_less"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/button_add_item_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:elevation="16dp"
            android:text="@string/save"
            android:fontFamily="casual"
            android:textColor="@color/colorAccent"
            android:background="@drawable/background_btn_save"/>

    </LinearLayout>

</LinearLayout>