<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="24dp"
            android:text="@string/newlist"
            android:gravity="center_horizontal"
            android:fontFamily="casual"
            android:textColor="@color/black"
            android:textSize="12pt" />

        <ImageView
            android:id="@+id/imgList_close"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:src="@drawable/icon_close"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/name"
        android:fontFamily="casual"
        android:textColor="@color/black"
        android:textSize="7pt"/>

    <EditText
        android:id="@+id/etList_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_edittext"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnList_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:elevation="16dp"
        android:text="@string/add"
        android:fontFamily="casual"
        android:textColor="@color/colorAccent"
        android:background="@drawable/background_btn_login"/>

</LinearLayout>